--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  
 <div>
   <h1>JESSICA ERMOVICK, The AMAZING!</h1>
-  <img src="/Mochi.PNG"/>
+  <img src="//Mochi.PNG"/>
   <p>Two paragraphs that will have text describing who you are.</p>
   <p>WHAT: MS-Data Analytics, BS- IT-Networking, BS-Accounting</p>
 
